Add test arg to find and print dockerfile

--- a/UpsideDownCLI.xcodeproj/xcshareddata/xcschemes/UpsideDownCLI.xcscheme
+++ b/UpsideDownCLI.xcodeproj/xcshareddata/xcschemes/UpsideDownCLI.xcscheme
@@ -107,6 +107,10 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "help"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "dockerfile"
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
