Split app and build configurations, rename version command to pipeline, start building out build command

--- a/UpsideDownCLI.xcodeproj/xcshareddata/xcschemes/UpsideDownCLI.xcscheme
+++ b/UpsideDownCLI.xcodeproj/xcshareddata/xcschemes/UpsideDownCLI.xcscheme
@@ -58,6 +58,18 @@
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
+            argument = "--configuration"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "~/Developer/upside-down/cli/test-build.plist"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--dry-run"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
             argument = "--double"
             isEnabled = "NO">
          </CommandLineArgument>
@@ -111,13 +123,20 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "dockerfile"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "path"
             isEnabled = "NO">
          </CommandLineArgument>
       </CommandLineArguments>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "TEST_ETC"
+            value = "/Users/marcus/Developer/upside-down/cli"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
